tests/diagnostics/naming/underscore_prefix/double_underscore/expect.txt
# exit: 1
input/main.lang0:2:5: error: variable name must be camelCase
      __value := 1
      ^
